added start quiz button function and setted up timer and questions functions

--- a/css/style.css
+++ b/css/style.css
@@ -41,6 +41,12 @@ main{
     width: 40%;
 }
 
+#answer-feedback{
+    margin: 18px;
+    display: none;
+    font-size: 30px;
+}
+
 #options-container{
     display: flex;
     flex-direction: column;
